Remove conjunction as part of physical optimization, when we know if the knn query is pushable or not